--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,21 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.31)
 project(TCSS-360-Game)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 23)
 
-# Set SDL3 root path
-set(SDL3_DIR "SDL3-3.2.16/cmake")
+# SDL3 root path relative to project
+#include_directories("${CMAKE_SOURCE_DIR}/SDL3-3.2.16/include")
 
-# Find SDL3 using CMake's config
-find_package(SDL3 REQUIRED CONFIG)
+# Add include directory
+#include_directories("${SDL3_ROOT}/include")
 
-add_executable(TCSS-360-Game main.cpp)
+# Link directory
+#link_directories("${SDL3_ROOT}/lib/x64")
 
-# Link SDL3
-target_link_libraries(TCSS-360-Game SDL3::SDL3)
+message(STATUS "HELLO WORLD!!!")
+
+# Add source file
+add_executable(TCSS-360-Game src/main.cpp)
+
+# Link against SDL3
+#target_link_libraries(TCSS-360-Game SDL3)
