--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,9 @@ cmake_minimum_required(VERSION 3.31)
 project(TCSS-360-Game)
 
 set(CMAKE_CXX_STANDARD 23)
-set(SDL3_ROOT "${CMAKE_SOURCE_DIR}/SDL3-3.2.16")
 
-# SDL3 root path relative to project
-include_directories("${CMAKE_SOURCE_DIR}/SDL3-3.2.16/include")
+# path to SDL3
+set(SDL3_ROOT "${CMAKE_SOURCE_DIR}/SDL3-3.2.16")
 
 # Add include directory
 include_directories("${SDL3_ROOT}/include")
