I have done a few things, I'll list them out here, first I created a utility header that contains the Point struct, then I created and set up the cmake to read a include directory for our, header files, I have also started implimentation of, a hit box class, it is still a work in progress.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,11 +9,20 @@ set(SDL3_ROOT "${CMAKE_SOURCE_DIR}/SDL3-3.2.16")
 # Add include directory
 include_directories("${SDL3_ROOT}/include")
 
+# Add include directory for our files
+include_directories("${CMAKE_SOURCE_DIR}/include")
+
 # Link directory
 link_directories("${SDL3_ROOT}/lib/x64")
 
 # Add source file
-add_executable(TCSS-360-Game src/main.cpp)
+add_executable(TCSS-360-Game src/main.cpp
+        src/app/model/Characters/AbstractCharacter.cpp
+        src/include/AbstractCharacter.h
+        src/include/Utils.h
+        src/app/model/Characters/Weapons/Hitbox.cpp
+        src/include/Hitbox.h
+)
 
 # Link against SDL3
 target_link_libraries(TCSS-360-Game SDL3)
