--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,16 +5,21 @@ set(CMAKE_CXX_STANDARD 23)
 
 # path to SDL3
 set(SDL3_ROOT "${CMAKE_SOURCE_DIR}/SDL3-3.2.16")
+set(SQLITE_ROOT "${CMAKE_SOURCE_DIR}/sqlite")
 
 # Add include directory
 include_directories("${SDL3_ROOT}/include")
+include_directories("${SQLITE_ROOT}/include")
 
 # Link directory
 link_directories("${SDL3_ROOT}/lib/x64")
 
 # Add source file
-add_executable(TCSS-360-Game src/main.cpp
+add_executable(TCSS-360-Game
+        src/main.cpp
+        src/db/sqlite_test.cpp
+        ${SQLITE_ROOT}/lib/sqlite3.c
 )
 
-# Link against SDL3
+# Link against SDL3 & SQLite
 target_link_libraries(TCSS-360-Game SDL3)
