basic engine implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,14 @@ include_directories("${SDL3_ROOT}/include")
 link_directories("${SDL3_ROOT}/lib/x64")
 
 # Add source file
-add_executable(TCSS-360-Game src/main.cpp)
+add_executable(TCSS-360-Game src/main.cpp
+        src/app/control/ObserverPattern.cpp
+        src/app/control/control.cpp
+        src/app/model/model.cpp
+        src/app/view/view.cpp
+        src/eng/Clock.h
+        src/eng/Clock.cpp
+)
 
 # Link against SDL3
 target_link_libraries(TCSS-360-Game SDL3)
